--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html{font-size:100%;overflow-y:scroll;-webkit-tap-highlight-color:rgba(0,0,0,0);-ms-text-size-adjust:100%;-webkit-text-size-adjust:none;}
 body{margin:0;font-size:14px;line-height:1.61;font-weight:400;}
-body, button, input, select, textarea{font-family:'Open Sans', sans-serif;color:#333;}
+body, button, input, nav, select, textarea{font-family:'Open Sans', sans-serif;color:#333;}
 a{color:#12C;}
 a:visited{color:#61C;}
 a:focus{outline:thin dotted;}
@@ -15,6 +15,7 @@ header{padding:0 0.5em;color:#C90B0B;}
 header img{border-radius:40px;float:left;}
 header p{font-size:1.5em;font-weight:bold;padding-left:4em;}
 header p span{font-size:0.8em;font-weight:normal;}
+nav{margin:0;font-size:12px;line-height:1.61;font-weight:300;}
 .hero{padding:2em;background-color:#f8f8f8;font-size:1.2em;border-bottom:1px solid #ccc;border-top:1px solid #ccc;}
 .content{padding:1em 1em;}
 .content li{list-style-type:none;font-size:1.1em;}
