--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ header{padding:0 0.5em;color:#C90B0B;}
 header img{border-radius:40px;float:left;}
 header p{font-size:1.5em;font-weight:bold;padding-left:4em;}
 header p span{font-size:0.8em;font-weight:normal;}
-nav{margin:0;font-size:10px;line-height:1.61;font-weight:200;}
+nav{padding:0 0 0.5em 0 ;margin:0;font-size:10px;line-height:1.61;font-weight:200;}
 .hero{padding:2em;background-color:#f8f8f8;font-size:1.2em;border-bottom:1px solid #ccc;border-top:1px solid #ccc;}
 .content{padding:1em 1em;}
 .content li{list-style-type:none;font-size:1.1em;}
